KS:M => fixed scrollbarbug for datatables

--- a/keyscore-manager/src/app/pipelines/pipeline-editor/pipely/style/pipely-style.scss
+++ b/keyscore-manager/src/app/pipelines/pipeline-editor/pipely/style/pipely-style.scss
@@ -76,7 +76,7 @@
 }
 
 .workspace {
-  height: calc(95vh - 3px);
+  height: 95vh;
 }
 
 .workspace-scroll-wrapper {
@@ -95,7 +95,7 @@
 }
 
 puzzle-box {
-  height: calc(45vh - 3px);
+  height: 45vh;
   margin-top: -1px;
   width: 100%;
   max-width: 100%;
